Fix menu text overflow bug

--- a/app/assets/stylesheets/styleguide.css.scss
+++ b/app/assets/stylesheets/styleguide.css.scss
@@ -113,9 +113,12 @@ button {
     background-color: rgb(0, 133, 188);
     display: block;
     li {
-      height: 30px;
-      line-height: 33px;
+      /*height: 30px;*/
+      line-height: 20px;
+      vertical-align: baseline;
       margin: 0;
+      padding-top: 10px;
+      padding-bottom: 5px;
       text-align: center;
       border-bottom: 3px solid #54D1FC;
       &:first-child {
